--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -25,14 +25,11 @@
 
   <div layout style="height: 60px; ">
 
-
     <div layout="row" style="width: 100%; margin-top: 6px; height: 80%;">
-
 
       <div layout layout-align="end center" style="margin-left: 0px;">
 
         <div style="margin-left: -77px; margin-top: 10px;">
-
 
           <label class="mainText"> Select Tools </label>
           <mat-select [(ngModel)]="selectedAgent1" [style.height.px]="20" [style.width.%]="14" (ngModelChange)="loadAgent1Info(selectedAgent1)"
@@ -74,24 +71,17 @@
         <mat-icon title="Cancel " class="mat-icon material-icons">
           cancel </mat-icon>
       </button>
-
-
     </div>
   </div>
-
-
   <div>
-
-    <div class="column2" style="margin-bottom: 1%; margin-right: 1px; border: white; border-radius: 10px; background-color: white; height: 69vh;">
+    <div class="column2">
       <div class="showTable" style="text-align: center; padding: 5px;">
         <!-- height: 45px; -->
-        <b>&nbsp; Co-Relation in Correlation.json</b> <br> <a style="font-size: 12px">
+        <b>&nbsp; Co-Relation in Correlation.json</b>
+        <br> <a style="font-size: 12px">
           (Please delete and re-create existing relation to change properties
           with UNIQUE name) </a>
-
       </div>
-
-
       <div class="arrange-horizontally">
         <!-- <-- Radio Button -->
         <div>
@@ -102,112 +92,90 @@
                    <input type="text" class="inputcss" required placeholder="Search a Co-Relation" id='myInput'
                     (keyup)='searchTable()'> 
                 </td> -->
-
               </tr>
               <tr>
                 <!-- <div class="orangeStripCssSmall"></div> -->
               </tr>
               <tr>
-                <td><label class="SubHeading">Display Co-Relation</label></td>
-                <td><button style="margin-left: 40px" mat-raised-button (click)="showDetailsDialog()" class="configureBut">View
-                    Correlation.json</button></td>
+                <td>
+                  <label class="SubHeading">Display Co-Relation</label>
+                </td>
+                <td>
+                  <button style="margin-left: 40px" mat-raised-button (click)="showDetailsDialog()" class="configureBut">View
+                    Correlation.json
+                  </button>
+                </td>
               </tr>
               <tr>
-
               </tr>
             </tbody>
           </table>
-          <label class="NoteCssFirst"><b>Please Note:</b></label><label class="NoteCss"> Ensure that the properties
-            selected to
-            build a &nbsp;Correlation <b>are indexed in Neo4j</b> for
-            Optimal Performance.
+          <label class="NoteCssFirst"><b>Please Note:</b></label>
+          <label class="NoteCss"> Ensure that the properties selected to build a &nbsp;Correlation <b>are indexed in
+              Neo4j</b> for Optimal Performance.
           </label>
         </div>
         <!-- ending-->
-
-
-
       </div>
       <!-- <div class="ListFooter">(There can be only ONE Relationship between a Set of Tools)</div> -->
-
       <div class="divTablesHeadingLeft">
-
-
-
-
-
         <table mat-table id="myTable" [dataSource]="relData">
-
-
           <ng-container matColumnDef="radio">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element " style="width: 15% !important">
+
+            <td mat-cell *matCellDef="let element " style="width: 15% !important;padding-left: 23px  !important;">
               <mat-radio-group [(ngModel)]="selectedDummyAgent">
                 <mat-radio-button [value]="element" color="primary" (click)="enableDelete()"></mat-radio-button>
               </mat-radio-group>
             </td>
           </ng-container>
-
           <ng-container matColumnDef="relationName">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element" class="tableText">
-              {{element}}</td>
+
+            <td mat-cell *matCellDef="let element">
+              <div class="tableText"> {{element.relationName}}
+              </div>
+              <div [innerHTML]="element.prop"></div>
+            </td>
           </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="dataComponentColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: dataComponentColumns;">
           </tr>
         </table>
+
       </div>
     </div>
-    <!-- <div>
-      <mat-paginator #paginator [pageSize]="MAX_ROWS_PER_TABLE" showFirstLastButtons class="paginationStyle"></mat-paginator>
-    </div> -->
 
-
-    <div class="column1" style="margin-bottom: 1%;  border: white; border-radius: 10px; background-color: white; height: 69vh;">
-
+    <div class="column1">
       <div class="showTable" style="text-align: center; padding: 5px;height: 65px;">
-        <b>&nbsp; Tool Properties</b> (Please select Tool Properties to
-        build a Co-Relation)<br>
-
-
+        <b>&nbsp; Tool Properties</b> (Please select Tool Properties to build a Co-Relation)
+        <br>
         <a style="font-size: 12px">
           (Please Note: A prefix "FROM_TOOLNAME1_TO_TOOLNAME2_" will be added to the Co-Relation name you input)
         </a>
       </div>
-
-      <input type="text" class="inputcss" #newName style="margin-left: 25px; width: 240px; margin-top: 10px"
-        [(ngModel)]='listFilter' [value]="searchValue" required placeholder="   Please input a Co-Relation name">
-
-
+      <input type="text" class="inputcss" #newName [(ngModel)]='listFilter' [value]="searchValue" required placeholder="   Please input a Co-Relation name">
       <button mat-raised-button [disabled]="(noShowDetail||noShowDetail2||!selectedAgent1 || !selectedAgent2||buttonOn) "
-        (click)="showDetailsDialogForNeo4j(selectedAgent1,selectedAgent2)" class="Neo4jDataButtonCss">Click
-        to see the
+        (click)="showDetailsDialogForNeo4j(selectedAgent1,selectedAgent2)" class="Neo4jDataButtonCss">Click to see the
         exsisting Co-Relations in Neo4j</button>
-
       <div style="height: 100%; width: 100%; overflow: visible;">
         <div style="width: 47%; display: inline-block; margin-left: 8px; vertical-align: top;">
           <table *ngIf="noShowDetail">
             <tr>
-              <td colspan="5" style="color: #0033A0; font-size: 18px; text-align: left; padding-top: 10px">
+              <td colspan="5" class="toollabel">
                 <b>{{startToolNullPropertiesMessage}} for selected tool</b>
               </td>
             </tr>
             <tr>
-              <td colspan="5" style="text-align: left; color: #00B140; padding-top: 10px; font-size: 16px;">
+              <td colspan="5" class="categorycss">
                 Label:<b>({{agent1Category}}:{{agent1Tool}})</b>
               </td>
             </tr>
           </table>
-
           <div *ngIf="showDetail" class="divTablesHeading">
-
             <div>
-              <b style="color: #0033A0; font-size: 18px;">{{agent1Tool}}
+              <b class="ToolHeadingCss">{{agent1Tool}}
                 Properties</b>
             </div>
-            <div style="color: #00B140; padding-top: 10px">
+            <div class='categoryLabelcss'>
               Label: <b>({{agent1Category}}:{{agent1Tool}})</b>
             </div>
           </div>
@@ -225,15 +193,14 @@
               </tr>
             </tbody>
           </table>
-
         </div>
-        <div style="width: 47%; display: inline-block; margin-left: 10px; vertical-align: top;">
+        <div class="MainTable">
           <div *ngIf="showDetail2" class="divTablesHeading">
             <div>
-              <b style="color: #0033A0; font-size: 18px;">{{agent2Tool}}
+              <b class="ToolDestCss">{{agent2Tool}}
                 Properties</b>
             </div>
-            <div style="color: #00B140; padding-top: 10px;">
+            <div class="DestLabelCsss">
               Label: <b>({{agent2Category}}:{{agent2Tool}})</b>
             </div>
           </div>
@@ -253,18 +220,17 @@
           </table>
           <table *ngIf="noShowDetail2">
             <tr>
-              <td colspan="5" style="color: #0033A0; font-size: 18px; text-align: left; padding-top: 10px">
+              <td colspan="5" class="destToolCss">
                 <b>{{endToolNullPropertiesMessage}} for selected tool</b>
               </td>
             </tr>
             <tr>
-              <td colspan="5" style="text-align: left; color: #00B140; padding-top: 10px; font-size: 16px;">
+              <td colspan="5" class="destCategory">
                 Label:<b>({{agent2Category}}:{{agent2Tool}})</b>
               </td>
             </tr>
           </table>
         </div>
-
       </div>
     </div>
   </div>
